--- a/styl.css
+++ b/styl.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-p {
+#a {
 width:300px;
 height:50px;
 background-color:white;
@@ -9,4 +9,11 @@ padding:20px;
 font-size:30px;
 text-align:center;
 }
-/n
+
+#b {
+    width: 300px;
+    height: 300px;
+    border-radius: 60%;
+    border: 35px solid red;
+    background-color: white;
+}
