--- a/styl.css
+++ b/styl.css
@@ -17,3 +17,33 @@ text-align:center;
     border: 35px solid red;
     background-color: white;
 }
+
+#c {
+    margin: 100px;
+    border: 5px solid black;
+    width: 300px;
+    height: 300px;
+    transform: rotate(45deg);
+    background-color: white;
+}
+
+#c2 {
+    background-color: yellow;
+    width: 200px;
+    height: 200px;
+    border: 5px solid black;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+#d {
+    font-size: 110px;
+    text-align: center
+    background-color: yellow;
+    width: 215px;
+    height: 125px;
+    border: 5px solid black;
+    border-style: dashed;
+}
